--- a/recurrent_neural_network/recurrent_neural_network_fundations/RNN_basics_tensorflow.ipynb
+++ b/recurrent_neural_network/recurrent_neural_network_fundations/RNN_basics_tensorflow.ipynb
@@ -208,6 +208,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "More details about `tf.nn.dynamic_rnn(...)`, click [here](https://github.com/August-K-Y/deep-learning-study/tree/master/recurrent_neural_network/recurrent_neural_network_fundations/tensorflow_dynamic_rnn_in_depth.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 4. Output Layer of RNN\n",
     "\n",
     "We only care about the final output, we'll be using that as our sentiment prediction. So we need to grab the last output with outputs[:, -1], the calculate the cost from that and labels_.\n",
