--- a/recurrent_neural_network/recurrent_neural_network_fundations/tensorflow_dynamic_rnn_in_depth.ipynb
+++ b/recurrent_neural_network/recurrent_neural_network_fundations/tensorflow_dynamic_rnn_in_depth.ipynb
@@ -115,7 +115,7 @@
     "* `states_val` with shape:  `(batch_size, state_size)` => (4, 5)\n",
     "\n",
     "**Point 2: More specifically, we observe that tf.nn.dynamic_rnn returns:**\n",
-    "* `outputs_val` contains information about <b>every time step</b>. In this particular example:\n",
+    "* `outputs_val` contains hidden states for each sample in a batch over <b>every time step</b>. In this particular example:\n",
     "    * 2 steps\n",
     "    * a batch of 4 examples, each has 5 dimensions.\n",
     "\n",
@@ -285,7 +285,7 @@
     "    * `states_val[1]` is the last step hidden states with shape:  `(batch_size, state_size)` => (4, 5)\n",
     "\n",
     "**Point 2: More specifically, we observe that tf.nn.dynamic_rnn returns:**\n",
-    "* `outputs_val` contains information about <b>every time step</b>. In this particular example:\n",
+    "* `outputs_val` contains hidden states for each sample in a batch over <b>every time step</b>. In this particular example:\n",
     "    * 2 steps\n",
     "    * a batch of 4 examples, each has 5 dimensions.\n",
     "* <b style=\"color:red\">NOTE</b> `states_val[0]` contains the memory states from last time step (Normally we do not use this)\n",
@@ -397,7 +397,6 @@
     "\n",
     "# We are using BasicLSTMCell here instead of BasicRNNCell\n",
     "basic_cell = tf.contrib.rnn.MultiRNNCell([build_cell(num_units[idx]) for idx in range(num_layers)])\n",
-    "# basic_cell = tf.contrib.rnn.BasicLSTMCell(num_units)\n",
     "\n",
     "initial_state = basic_cell.zero_state(4, tf.float32)\n",
     "\n",
@@ -467,11 +466,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Summary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* `outputs` contains hidden states for each sample (in a batch) over <b>every time step</b> of the <b>last layer</b>\n",
+    "* `states` contains hidden states (and memory states) for each sample (in a batch) over <b>every layers</b> at the <b>last time step</b>"
+   ]
   }
  ],
  "metadata": {
