Add mini project IMDB movie sentimenal analysis and update keras_basics.ipynb

--- a/deep-learning-fundamentals/keras_basics.ipynb
+++ b/deep-learning-fundamentals/keras_basics.ipynb
@@ -4,17 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Neural Networks in Keras\n",
+    "# Neural Networks in Keras"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "every time we need to use a neural network, we won't need to code the activation function, gradient descent, etc. There are lots of packages for this, which we recommend you to check out, including the following:\n",
     "\n",
-    "Luckily, every time we need to use a neural network, we won't need to code the activation function, gradient descent, etc. There are lots of packages for this, which we recommend you to check out, including the following:\n",
-    "\n",
-    "* Keras\n",
-    "* TensorFlow\n",
-    "* Caffe\n",
-    "* Theano\n",
-    "* Scikit-learn\n",
-    "* And many others!\n",
-    "\n",
+    "Keras\n",
+    "TensorFlow\n",
+    "Caffe\n",
+    "Theano\n",
+    "Scikit-learn\n",
+    "And many others!\n",
     "In this course, we will learn Keras. Keras makes coding deep neural networks simpler. To demonstrate just how easy it is, you're going to build a simple fully-connected network in a few dozen lines of code.\n",
     "\n",
     "We’ll be connecting the concepts that you’ve learned in the previous lessons to the methods that Keras provides.\n",
@@ -26,42 +30,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Building a Neural Network in Keras\n",
+    "## Sequential Model\n",
     "\n",
-    "Here are some core concepts you need to know for working with Keras."
+    "* [Official document](https://keras.io/getting-started/sequential-model-guide/)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sequential Model\n",
-    "\n",
-    "\n",
-    "\n",
     "```python\n",
     "from keras.models import Sequential\n",
     "\n",
     "#Create the Sequential model\n",
     "model = Sequential()\n",
-    "```"
+    "```\n",
+    "    \n",
+    "The [keras.models.Sequential class](https://keras.io/models/sequential/) is a wrapper for the neural network model that treats the network as a sequence of layers. It implements the Keras model interface with common methods like `compile()`, `fit()`, and `evaluate()` that are used to train and run the model. We'll cover these functions soon, but first let's start looking at the layers of the model."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `keras.models.Sequential` class is a wrapper for the neural network model that treats the network as a sequence of layers. It implements the Keras model interface with common methods like `compile()`, `fit()`, and `evaluate()` that are used to train and run the model. We'll cover these functions soon, but first let's start looking at the layers of the model."
+    "## Layers"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Layers\n",
-    "\n",
-    "The Keras Layer class provides a common interface for a variety of standard neural network layers. There are fully connected layers, max pool layers, activation layers, and more. You can add a layer to a model using the model's add() method. For example, a simple model with a single hidden layer might look like this:\n",
-    "\n",
+    "The Keras Layer class provides a common interface for a variety of standard neural network layers. There are fully connected layers, max pool layers, activation layers, and more. You can add a layer to a model using the model's add() method. For example, a simple model with a single hidden layer might look like this:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```python\n",
     "    import numpy as np\n",
     "    from keras.models import Sequential\n",
@@ -89,39 +94,55 @@
     "\n",
     "    # Add a sigmoid activation layer\n",
     "    model.add(Activation('sigmoid'))\n",
-    "```\n",
-    "\n",
-    "Keras requires the input shape to be specified in the first layer, but it will automatically infer the shape of all other layers. This means you only have to explicitly set the input dimensions for the first layer.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Keras requires the input shape to be specified in the first layer, but it will automatically infer the shape of all other layers. This means you only have to explicitly set the input dimensions for the first layer.\n",
     "\n",
     "The first (hidden) layer from above, \n",
     "\n",
     "```python\n",
-    "model.add(Dense(32, input_dim=X.shape[1])), \n",
+    "model.add(Dense(32, input_dim=X.shape[1]))\n",
     "```\n",
     "\n",
-    "creates 32 nodes which each expect to receive 2-element vectors as inputs. Each layer takes the outputs from the previous layer as inputs and pipes through to the next layer. This chain of passing output to the next layer continues until the last layer, which is the output of the model. We can see that the output has dimension 1.\n",
+    "creates 32 nodes which each expect to receive 2-element vectors as inputs. \n",
     "\n",
-    "The activation \"layers\" in Keras are equivalent to specifying an activation function in the Dense layers, for example\"\n",
+    "> Each layer in Keras takes the outputs from the previous layer as inputs and pipes through to the next layer. This chain of passing output to the next layer continues until the last layer, which is the output of the model. \n",
+    "\n",
+    "We can see that the output has dimension 1.\n",
+    "\n",
+    "The activation \"layers\" in Keras are equivalent to specifying an activation function in the Dense layers. e.g.,\n",
     "\n",
     "```python\n",
-    "model.add(Dense(128)); model.add(Activation('softmax')) \n",
-    "model.add(Dense(128, activation=\"softmax\")), \n",
+    "model.add(Dense(128)); \n",
+    "model.add(Activation('softmax')) \n",
     "```\n",
     "\n",
-    "is computationally equivalent\n",
+    "is computationally equivalent to \n",
+    "\n",
+    "```python\n",
+    "model.add(Dense(128, activation=\"softmax\"))\n",
+    "```\n",
     "\n",
     "but it is common to explicitly separate the activation layers because it allows direct access to the outputs of each layer before the activation is applied (which is useful in some model architectures).\n",
     "\n",
-    "Once we have our model built, we need to compile it before it can be run. Compiling the Keras model calls the backend (tensorflow, theano, etc.) and binds the optimizer, loss function, and other parameters required before the model can be run on any input data. We'll specify the loss function to be `categorical_crossentropy` which can be used when there are only two classes, and specify `adam` as the optimizer (which is a reasonable default when speed is a priority). And finally, we can specify what metrics we want to evaluate the model with. Here we'll use accuracy.\n",
+    "Once we have our model built, we need to `compile` it before it can be run. \n",
+    "\n",
+    "> Compiling the Keras model calls the backend (tensorflow, theano, etc.) and binds \n",
+    "* optimizer, \n",
+    "* loss function, \n",
+    "* metrics,\n",
+    "* and other parameters required before the model can be run on any input data. \n",
+    "\n",
+    "We'll specify the `loss function` to be categorical_crossentropy which can be used when there are only two classes, and specify adam as the `optimizer` (which is a reasonable default when speed is a priority). And finally, we can specify what `metrics` we want to evaluate the model with. Here we'll use accuracy.\n",
     "\n",
     "```python\n",
     "model.compile(loss=\"categorical_crossentropy\", optimizer=\"adam\", metrics = [\"accuracy\"])\n",
     "```\n",
-    "\n",
-    "The `model.compile()` specifies:\n",
-    "* loss function\n",
-    "* optimizer\n",
-    "* merics\n",
     "\n",
     "We can see the resulting model architecture with the following command:\n",
     "\n",
@@ -143,7 +164,7 @@
     "model.evaluate()\n",
     "```\n",
     "\n",
-    "Pretty simple, right? Let's put it into practice."
+    "\n"
    ]
   },
   {
@@ -154,15 +175,15 @@
     "\n",
     "Let's start with the simplest example. In this quiz you will build a simple multi-layer feedforward neural network to solve the XOR problem.\n",
     "\n",
-    "1. Set the first layer to a `Dense()` layer with an output width of 8 nodes and the input_dim set to the size of the training samples (in this case 2).\n",
-    "2. Add a `tanh` activation function.\n",
+    "1. Set the first layer to a Dense() layer with an output width of 8 nodes and the input_dim set to the size of the training samples (in this case 2).\n",
+    "2. Add a tanh activation function.\n",
     "3. Set the output layer width to 1, since the output has only two classes. (We can use 0 for one class an 1 for the other)\n",
-    "4. Use a `sigmoid` activation function after the output layer.\n",
+    "4. Use a sigmoid activation function after the output layer.\n",
     "5. Run the model for 50 epochs.\n",
     "\n",
     "This should give you an accuracy of 50%. That's ok, but certainly not great. Out of 4 input points, we're correctly classifying only 2 of them. Let's try to change some parameters around to improve. For example, you can increase the number of epochs. You'll pass this quiz if you get 75% accuracy. Can you reach 100%?\n",
     "\n",
-    "To get started, review the Keras documentation about models and layers. The Keras example of a [Multi-Layer Perceptron](https://github.com/keras-team/keras/blob/master/examples/mnist_mlp.py) network is similar to what you need to do here. Use that as a guide, but keep in mind that there will be a number of differences."
+    "To get started, review the Keras documentation about models and layers. The Keras example of a [Multi-Layer Perceptron network](https://github.com/fchollet/keras/blob/master/examples/mnist_mlp.py) is similar to what you need to do here. Use that as a guide, but keep in mind that there will be a number of differences."
    ]
   },
   {
@@ -177,16 +198,16 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense_1 (Dense)              (None, 32)                96        \n",
+      "dense_1 (Dense)              (None, 8)                 24        \n",
       "_________________________________________________________________\n",
-      "activation_1 (Activation)    (None, 32)                0         \n",
+      "activation_1 (Activation)    (None, 8)                 0         \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 2)                 66        \n",
+      "dense_2 (Dense)              (None, 1)                 9         \n",
       "_________________________________________________________________\n",
-      "activation_2 (Activation)    (None, 2)                 0         \n",
+      "activation_2 (Activation)    (None, 1)                 0         \n",
       "=================================================================\n",
-      "Total params: 162\n",
-      "Trainable params: 162\n",
+      "Total params: 33\n",
+      "Trainable params: 33\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -205,14 +226,14 @@
      "text": [
       "4/4 [==============================] - 0s\n",
       "\n",
-      "Accuracy:  0.75\n",
+      "Accuracy:  1.0\n",
       "\n",
       "Predictions:\n",
       "4/4 [==============================] - 0s\n",
-      "[[  5.55699468e-01   2.03364082e-02]\n",
-      " [  9.99901891e-01   8.94724905e-01]\n",
-      " [  9.54160932e-05   2.01120437e-03]\n",
-      " [  5.42255461e-01   3.90980132e-02]]\n"
+      "[[ 0.06273437]\n",
+      " [ 0.86689943]\n",
+      " [ 0.91195548]\n",
+      " [ 0.11260458]]\n"
      ]
     }
    ],
@@ -220,7 +241,7 @@
     "import numpy as np\n",
     "from keras.utils import np_utils\n",
     "import tensorflow as tf\n",
-    "\n",
+    "# Using TensorFlow 1.0.0; use tf.python_io in later versions\n",
     "# tf.python.control_flow_ops = tf\n",
     "\n",
     "# Set random seed\n",
@@ -232,21 +253,20 @@
     "\n",
     "# Initial Setup for Keras\n",
     "from keras.models import Sequential\n",
-    "from keras.layers.core import Dense, Activation, Flatten\n",
-    "\n",
-    "# One-hot encoding the output\n",
-    "y = np_utils.to_categorical(y)\n",
+    "from keras.layers.core import Dense, Activation\n",
     "\n",
     "# Building the model\n",
     "xor = Sequential()\n",
-    "xor.add(Dense(32, input_dim=2))\n",
-    "xor.add(Activation(\"sigmoid\"))\n",
-    "xor.add(Dense(2))\n",
-    "xor.add(Activation(\"sigmoid\"))\n",
+    "\n",
+    "# Add required layers\n",
+    "xor.add(Dense(8, input_dim=2))\n",
+    "xor.add(Activation('tanh'))\n",
+    "xor.add(Dense(1))\n",
+    "xor.add(Activation('sigmoid'))\n",
     "\n",
     "# Specify loss as \"binary_crossentropy\", optimizer as \"adam\",\n",
     "# and add the accuracy metric\n",
-    "xor.compile(loss=\"categorical_crossentropy\", optimizer=\"adam\", metrics = ['accuracy'])\n",
+    "xor.compile(loss=\"binary_crossentropy\", optimizer=\"adam\", metrics = [\"accuracy\"])\n",
     "\n",
     "# Uncomment this line to print the model architecture\n",
     "xor.summary()\n",
@@ -264,11 +284,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Keras Optimizers\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "There are many optimizers in Keras, that we encourage you to explore further, in this link, or in this excellent [blog post](http://ruder.io/optimizing-gradient-descent/index.html). These optimizers use a combination of the tricks above, plus a few others. Some of the most common are:\n",
+    "\n",
+    "**SGD**\n",
+    "\n",
+    "This is Stochastic Gradient Descent. It uses the following parameters:\n",
+    "\n",
+    "* Learning rate.\n",
+    "* Momentum (This takes the weighted average of the previous steps, in order to get a bit of momentum and go over bumps, as a way to not get stuck in local minima).\n",
+    "* Nesterov Momentum (This slows down the gradient when it's close to the solution).\n",
+    "\n",
+    "**Adam**\n",
+    "\n",
+    "Adam (Adaptive Moment Estimation) uses a more complicated exponential decay that consists of not just considering the average (first moment), but also the variance (second moment) of the previous steps.\n",
+    "\n",
+    "**RMSProp**\n",
+    "\n",
+    "RMSProp (RMS stands for `Root Mean Squared Error`) decreases the learning rate by dividing it by an exponentially decaying average of squared gradients."
+   ]
   }
  ],
  "metadata": {
