--- a/recurrent_neural_network/recurrent_neural_network_fundations/recurrent_neural_network_foundation.ipynb
+++ b/recurrent_neural_network/recurrent_neural_network_fundations/recurrent_neural_network_foundation.ipynb
@@ -4,16 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Simple Recurrent Unit"
+    "## Vanilla Recurrent Unit"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* RNN mainly works on data that are sequences\n",
+    "* RNN works on data that are sequences\n",
     "\n",
     "> Sequence involves a factor of time. Elements in a sequence appear or occur in chronological order\n",
+    "\n",
+    "* and exploits\n",
+    "\n",
+    "> States of elements in sequence. States is defined as the output of hidden layer neurons, which will serve as additional input to the network during next training (time) step.\n",
     "\n",
     "* Suppose a sequence is of length T (T observations/elements). Then, this sequence would be: \n",
     "\n",
