Change file name and update tensorflow_mini_batching

--- a/deep-learning-fundamentals/deep_learning_fundamentals_tensorflow/tensorflow_mini_batching.ipynb
+++ b/deep-learning-fundamentals/deep_learning_fundamentals_tensorflow/tensorflow_mini_batching.ipynb
@@ -18,47 +18,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting /tmp/tensorflow/mnist/input_data/train-images-idx3-ubyte.gz\n",
-      "Extracting /tmp/tensorflow/mnist/input_data/train-labels-idx1-ubyte.gz\n",
-      "Extracting /tmp/tensorflow/mnist/input_data/t10k-images-idx3-ubyte.gz\n",
-      "Extracting /tmp/tensorflow/mnist/input_data/t10k-labels-idx1-ubyte.gz\n"
-     ]
-    }
-   ],
-   "source": [
-    "from tensorflow.examples.tutorials.mnist import input_data\n",
-    "import tensorflow as tf\n",
-    "import numpy as np\n",
-    "\n",
-    "n_input = 784  # MNIST data input (img shape: 28*28)\n",
-    "n_classes = 10  # MNIST total classes (0-9 digits)\n",
-    "\n",
-    "# Import MNIST data\n",
-    "# mnist = input_data.read_data_sets('/datasets/ud730/mnist', one_hot=True)\n",
-    "mnist = input_data.read_data_sets('/tmp/tensorflow/mnist/input_data', one_hot=True)\n",
-    "\n",
-    "\n",
-    "# The features are already scaled and the data is shuffled\n",
-    "train_features = mnist.train.images\n",
-    "test_features = mnist.test.images\n",
-    "\n",
-    "train_labels = mnist.train.labels.astype(np.float32)\n",
-    "test_labels = mnist.test.labels.astype(np.float32)\n",
-    "\n",
-    "# Weights & bias\n",
-    "weights = tf.Variable(tf.random_normal([n_input, n_classes]))\n",
-    "bias = tf.Variable(tf.random_normal([n_classes]))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -108,7 +67,7 @@
     "\n",
     "> The <b style='color:red'>None</b> dimension is a placeholder for the batch size. At runtime, TensorFlow will accept any batch size greater than 0.\n",
     "\n",
-    "Going back to our earlier example, this setup allows you to feed features and labels into the model as either the batches of 128 samples or the single batch of 104 samples."
+    "This setup allows you to feed features and labels into the model as either the batches of 128 samples or the single batch of 104 samples."
    ]
   },
   {
@@ -192,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +221,8 @@
       "end_i 3\n",
       "start_i 3\n",
       "end_i 6\n",
-      "[[[['F11', 'F12', 'F13', 'F14'], ['F21', 'F22', 'F23', 'F24'], ['F31', 'F32', 'F33', 'F34']], [['L11', 'L12'], ['L21', 'L22'], ['L31', 'L32']]], [[['F41', 'F42', 'F43', 'F44']], [['L41', 'L42']]]]\n"
+      "[[['F11', 'F12', 'F13', 'F14'], ['F21', 'F22', 'F23', 'F24'], ['F31', 'F32', 'F33', 'F34']], [['L11', 'L12'], ['L21', 'L22'], ['L31', 'L32']]]\n",
+      "[[['F41', 'F42', 'F43', 'F44']], [['L41', 'L42']]]\n"
      ]
     }
    ],
@@ -281,7 +241,8 @@
     "    ['L41','L42']]\n",
     "\n",
     "example_batches = batches(3, example_features, example_labels)\n",
-    "print(example_batches)"
+    "for batch in example_batches:\n",
+    "    print(batch)"
    ]
   },
   {
@@ -297,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +269,10 @@
       "Extracting /tmp/tensorflow/mnist/input_data/train-labels-idx1-ubyte.gz\n",
       "Extracting /tmp/tensorflow/mnist/input_data/t10k-images-idx3-ubyte.gz\n",
       "Extracting /tmp/tensorflow/mnist/input_data/t10k-labels-idx1-ubyte.gz\n",
-      "(55000, 784)\n"
+      "(55000, 784)\n",
+      "(10000, 784)\n",
+      "(55000, 10)\n",
+      "(10000, 10)\n"
      ]
     }
    ],
@@ -339,14 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,15 +330,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** get_batches() Generator **\n",
+    "\n",
+    "```python\n",
+    "def get_batches(batch_size=100, x, y):\n",
+    "    \n",
+    "    n_batches = len(x)//batch_size\n",
+    "    \n",
+    "    # Different from above example, here only get full batches\n",
+    "    features, labels = x[:n_batches*batch_size], y[:n_batches*batch_size]\n",
+    "    \n",
+    "    # returns slices with size [batch_size]\n",
+    "    sample_size = len(features)\n",
+    "    for start_i in range(0, sample_size, batch_size):\n",
+    "        end_i = start_i + batch_size\n",
+    "        yield features[start_i:end_i], labels[start_i:end_i]\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test Accuracy: 0.0940999984741211\n"
+      "Test Accuracy: 0.1387999951839447\n"
      ]
     }
    ],
@@ -428,6 +407,13 @@
     "\n",
     "print('Test Accuracy: {}'.format(test_accuracy))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
