--- a/recurrent_neural_network/recurrent_neural_network_fundations/RNN_basic_workflow_tensorflow.ipynb
+++ b/recurrent_neural_network/recurrent_neural_network_fundations/RNN_basic_workflow_tensorflow.ipynb
@@ -304,7 +304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Batching\n",
+    "## 6. Mini-batching\n",
     "\n",
     "This is a simple function for returning batches from data. \n",
     "* First it removes data such that we only have full batches. \n",
@@ -316,12 +316,16 @@
     "    n_batches = len(x)//batch_size\n",
     "    \n",
     "    # Only get full batches\n",
-    "    x, y = x[:n_batches*batch_size], y[:n_batches*batch_size]\n",
+    "    features, labels = x[:n_batches*batch_size], y[:n_batches*batch_size]\n",
     "    \n",
     "    # returns slices with size [batch_size]\n",
-    "    for ii in range(0, len(x), batch_size):\n",
-    "        yield x[ii:ii+batch_size], y[ii:ii+batch_size]\n",
-    "```"
+    "    sample_size = len(features)\n",
+    "    for start_i in range(0, sample_size, batch_size):\n",
+    "        end_i = start_i + batch_size\n",
+    "        yield features[start_i:end_i], labels[start_i:end_i]\n",
+    "```\n",
+    "\n",
+    "* More detailed explanation on mini-batch, refer to [here](https://github.com/August-K-Y/deep-learning-study/blob/master/deep-learning-fundamentals/deep_learning_fundamentals_tensorflow/tensorflow_mini_batching.ipynb)"
    ]
   },
   {
