Add recursive network sentiment data preparation for RNN

--- a/natural_language_process/sentiment_analysis/sentiment-analysis_on_movie_review_tensorflow/Sentiment_analysis_RNN_tensorflow.ipynb
+++ b/natural_language_process/sentiment_analysis/sentiment-analysis_on_movie_review_tensorflow/Sentiment_analysis_RNN_tensorflow.ipynb
@@ -202,8 +202,11 @@
     "# Create your dictionary that maps vocab words to integers here\n",
     "from collections import Counter\n",
     "counts = Counter(words)\n",
-    "# print(counts)\n",
+    "print(type(counts))\n",
+    "\n",
     "vocab = sorted(counts, key=counts.get, reverse=True)\n",
+    "\n",
+    "# Note that index start from 1\n",
     "vocab_to_int = {word:i for i, word in enumerate(vocab, 1)}"
    ]
   },
@@ -332,7 +335,7 @@
    "source": [
     "from collections import Counter\n",
     "\n",
-    "# Create index for length of review\n",
+    "# Create length to frequency map\n",
     "review_lens = Counter([len(x) for x in reviews_ints])\n",
     "print(\"Zero-length reviews: {}\".format(review_lens[0]))\n",
     "print(\"Maximum review length: {}\".format(max(review_lens)))"
@@ -450,9 +453,18 @@
     "# Create features with shape (len(reviews_ints), seq_len) and initialized with zeros\n",
     "features = np.zeros((len(reviews_ints), seq_len), dtype=int)\n",
     "\n",
+    "# Create list holding the length for each review\n",
+    "lengths = []\n",
     "\n",
+    "# row is the review in forms of a list of integers\n",
     "for i, row in enumerate(reviews_ints):\n",
-    "    features[i, -len(row):] = np.array(row)[:seq_len]\n"
+    "    \n",
+    "    # left padding\n",
+    "    features[i, -len(row):] = np.array(row)[:seq_len]\n",
+    "    \n",
+    "    # record the length of each review. This might be useful when we want to use sequence_length argument\n",
+    "    # of tf.nn.dynamic_rnn(...)\n",
+    "    lengths.append(len(row))\n"
    ]
   },
   {
